# erpmaxpk

./: COMPLETE_SETUP_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_CHECKLIST.md  README.md  README_DEPLOYMENT.md  README_URDU.md  apps.json  deploy-to-railway.md  docker-compose.yml  docker-compose.yml.new  package.json  railway-deploy.json  railway-template.json  railway.json  railway.toml  railway.yaml  requirements.txt
apps/erpmax/: README.md  __init__.py  build.json  hooks.py  manifest.json  package.json  pyproject.toml  setup.py
apps/erpmax/erpmax/: __init__.py  api.py  auth.py  boot.py  install.py  notifications.py  queries.py  tasks.py  uninstall.py
apps/erpmax/public/css/: custom-theme.css  erpmax.css
apps/erpmax/public/js/: custom-scripts.js  erpmax.js
config/: common_site_config.json
docker/: Dockerfile  nginx.conf  supervisord.conf
scripts/: start-schedule.sh  start-web.sh  start-worker.sh  start.sh  wait-for-it.sh
